<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <!--
    <TextView
        android:id="@+id/tv_signup"
        style="@style/ShadowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stripe_repeat"
        android:gravity="center"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text"
        android:textColorLink="@color/text_link" />
        -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" >

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/label_user_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" android:id="@+id/tv_email"/>

            <AutoCompleteTextView
                android:id="@+id/et_email"
                style="@style/SignInEditText"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/actv_email" />

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text"
                android:id="@+id/tv_choose_password"/>

            <EditText
                android:id="@+id/et_choose_password"
                style="@style/SignInEditText"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:password="true" />

            <Button
                android:id="@+id/b_login"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:onClick="handleLogin"
                android:padding="10dp"
                android:text="@string/label_login"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_or"
                    android:id="@+id/textView" android:layout_gravity="center" android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_register"
                    android:id="@+id/textView2" android:layout_gravity="center" android:layout_marginTop="15dp"
                    android:clickable="true" android:onClick="loadRegisterActivity"
                    android:textColor="@color/button_background_enabled_end"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>